# opencxl-qemu

./: Makefile  README.md  meson.build
cxl_scripts/: Makefile  cheatsheet  clang-format  iogen.c  sock_server.js  sock_server.py  start-vm-debug.sh  start-vm-kernel-dev.sh  start-vm-type1.sh  start-vm-type2.sh  start-vm.sh
docker/: Dockerfile-dev  Dockerfile-svc
hw/acpi/: cxl.c
hw/cxl/: cxl-cdat.c  cxl-component-utils.c  cxl-host.c  cxl-mailbox-utils.c  cxl_hcache.c  cxl_type1_hcoh.c  cxl_type2_hcoh.c  meson.build  trace-events  trace.h
hw/i386/: pc.c  trace-events
hw/mem/: cxl_dcache.c  cxl_type1.c  cxl_type1_dcoh.c  cxl_type2.c  cxl_type2_dcoh.c  cxl_type3.c  cxl_type3_remote.c  meson.build  trace-events
hw/pci/: pci-qmp-cmds.c  pci.c  pcie_aer.c  pcie_doe.c  trace-events
hw/pci-bridge/: cxl_downstream.c  cxl_downstream_remote.c  cxl_endian.c  cxl_pretty.c  cxl_root_port.c  cxl_socket_transport.c  cxl_upstream.c  cxl_upstream_remote.c  gen_pcie_root_port.c  i82801b11.c  ioh3420.c  meson.build  pci_bridge_dev.c  pci_expander_bridge.c  pcie_pci_bridge.c  pcie_root_port.c  simba.c  trace-events  trace.h  xio3130_downstream.c  xio3130_upstream.c
include/hw/cxl/: cxl.h  cxl_cdat.h  cxl_component.h  cxl_dcache.h  cxl_device.h  cxl_emulator_packet.h  cxl_endian.h  cxl_hcache.h  cxl_packet.h  cxl_pci.h  cxl_pretty.h  cxl_socket_transport.h  cxl_type1_dcoh.h  cxl_type1_hcoh.h  cxl_type2_dcoh.h  cxl_type2_hcoh.h
include/hw/pci/: pci_bridge.h  pcie_doe.h
softmmu/: qdev-monitor.c  trace-events  vl.c
